fix spacings

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -89,6 +89,7 @@ html {
   outline: 0;
   border-radius: 2px;
   padding: 10px 20px;
+  margin-top: 7px;
   font-size: 14px;
   background-color: var(--color-dark);
   color: var(--color-bg);
@@ -102,7 +103,7 @@ html {
 
 input.form-element, textarea.form-element {
   width: 100%;
-  margin: 7px auto;
+  margin: 7px auto 0px;
   padding: 8px;
   border: none;
   font-size: 18px;
